[project]
name = "cbse-prank-backend"
version = "0.1.0"
description = "Anonymous counter backend for the CBSE Class XII Results 2026 prank page."
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.111",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
